@@ -4,6 +4,7 @@ S3method(c,ParamSet)
 S3method(getOptPathDOB,OptPathDF)
 S3method(getOptPathEOL,OptPathDF)
 S3method(getOptPathEl,OptPathDF)
+S3method(getOptPathErrorMessages,OptPathDF)
 S3method(getOptPathLength,OptPathDF)
 S3method(getOptPathY,OptPathDF)
 S3method(hasFiniteBoxConstraints,Param)
@@ -44,6 +45,7 @@ export(getOptPathBestIndex)
 export(getOptPathDOB)
 export(getOptPathEOL)
 export(getOptPathEl)
+export(getOptPathErrorMessages)
 export(getOptPathLength)
 export(getOptPathParetoFront)
 export(getOptPathY)
